tests/NormalTests/paczka1/fuzzy1/26528892.err
Error in line 9: ddqXFlt A810 57,2
Error in line 25: gaQ6k S211 8,0
Error in line 27: gaQ6k A810 8,8
Error in line 33: jXDJTSc S211 27,4
Error in line 39: jXDJTSc A978 59,1
